fixing cookies
