# swagger.yaml
@@ -44,6 +44,8 @@ paths:
       responses:
         '200':
           description: A list of tasks
+          
+  /tasks/create_task:
     post:
       summary: Create a new task
       requestBody:
@@ -62,6 +64,8 @@ paths:
       responses:
         '201':
           description: New task created
+          
+  /tasks/<taskId>:
     put:
       summary: Update a task by ID
       parameters:
